--- a/MidiSharp/MidiSharp.csproj
+++ b/MidiSharp/MidiSharp.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Headers\MTrkChunkHeader.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="ManufacturerId.cs" />
-    <Compile Include="MidiEventListExtensions.cs" />
+    <Compile Include="MidiEventCollection.cs" />
     <Compile Include="MidiParser.cs" />
     <Compile Include="MidiSequence.cs" />
     <Compile Include="MidiSequenceExtensions.cs" />
@@ -93,6 +93,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecialChannels.cs" />
     <Compile Include="Tonality.cs" />
+    <Compile Include="MidiTrackCollection.cs" />
     <Compile Include="Validate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
