Added some more tests and fixed a few resulting arg validation errors.  Also cleaned up a bit more of the object model.

--- a/MidiSharp.Tests/MidiSharp.Tests.csproj
+++ b/MidiSharp.Tests/MidiSharp.Tests.csproj
@@ -50,7 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EventTests.cs" />
     <Compile Include="SequenceTests.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MidiSharp\MidiSharp.csproj">
